# tabletop-screen

./: .gitignore  README.md  macro-keyboard-mapping.yaml  pyproject.toml
src/: tabletopLighting.py
src/light-strip-tests/: customStrandTest.py
src/tabletop_screen.egg-info/: PKG-INFO  SOURCES.txt
